--- a/ui/src/shared/components/inputText/style.css
+++ b/ui/src/shared/components/inputText/style.css
@@ -1,6 +1,8 @@
 .inputText {
     width: 100%;
+    position: relative;
 }
+
 
 .inputText input[type=text] {
     width: calc(100% - 10px);    
@@ -14,4 +16,42 @@
     box-sizing: border-box;
     color: rgb(53, 53, 53);
     
+}
+@media only screen and (max-width: 600px) {
+    .inputText input[type=text] {
+        width: calc(100% - 10px);    
+        height: 32px;
+        border: 1px solid silver;
+        margin-top: 5px;
+        margin-left: 5px;
+        margin-right: 5px;
+        border-radius: 4px;
+        padding-left: 5px;
+        box-sizing: border-box;
+        color: rgb(53, 53, 53);
+        
+    }
+}
+
+.warning {
+    color: rgb(255, 88, 88);
+    position: absolute;
+    left: calc(100%);
+    top:10px;
+    width: 120px;
+    font-size: 12px;
+}
+
+.inputWarning input[type=text] {
+    border: 1px solid rgb(255, 88, 88);
+}
+
+@media only screen and (max-width: 600px) {
+    .warning {
+        position: relative;
+        left: 8px;
+        width: calc(100% - 8px);
+        margin-top: 8px;
+        top:0px;
+    }
 }
